# cookiecutter-create-reactpy-app

./: LICENSE  Makefile  README.md  cookiecutter.json  main.py  pyproject.toml
hooks/: post_gen_project.sh
src/: App.py
src/styles/: __init__.py  index.py
{{cookiecutter.app_name}}/: main.py
{{cookiecutter.project_directory}}/: Makefile  README.md  main.py  utilities.py
{{cookiecutter.project_directory}}/src/: App.py
{{cookiecutter.project_directory}}/src/styles/: App.py  __init__.py
{{cookiecutter.project_name}}/: README.md  pyproject.toml
{{cookiecutter.project_name}}/src/: App.py
