[tool.poetry]
name = "cookiecutter-create-reactpy-app"
version = "0.1.0"
description = ""
authors = ["Minura Punchihewa <minurapunchihewa17@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
reactpy = {extras = ["flask"], version = "^1.0.2"}
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
